Update http client to 3.0.1
git-svn-id: https://svn.apache.org/repos/asf/cocoon/trunk@506384 13f79535-47bb-0310-9956-ffa450edef68